<resources>
    <string name="app_name" translatable="false">Moo-V</string>
    <string name="change_language_settings">Change language</string>
    <string name="banner_base_url" translatable="false">https://image.tmdb.org/t/p/w780</string>
    <string name="poster_base_url" translatable="false">https://image.tmdb.org/t/p/w780</string>
    <string name="poster_small_base_url" translatable="false">https://image.tmdb.org/t/p/w185</string>


    <string name="movie_banner">Movie banner</string>
    <string name="title_movie">Movie</string>
    <string name="title_tv_show">TV Show</string>
    <string name="title_favorite">Liked</string>
    <string name="max_score" translatable="false">/100</string>
    <string name="title">Title</string>
    <string name="original_title">Original Title</string>
    <string name="release_date">Release Date</string>
    <string name="popularity">Popularity</string>
    <string name="user_score">User Score</string>
    <string name="error_dialog_title">Error</string>
    <string name="error_dialog_message">An error occurred while retrieving %s from Server. Please try again</string>
    <string name="try_again">Try Again</string>
    <string name="cancel">Cancel</string>
    <string name="favorite_button">favorite button</string>
    <string name="no_item_text">No item yet to be shown</string>
    <string name="search">Search</string>

    <!-- Preference -->
    <string name="language">Language</string>
    <string name="airing_today_reminder_key" translatable="false">airing_today_reminder_key</string>
    <string name="airing_today_reminder">Airing Today reminder</string>
    <string name="airing_today_reminder_summary">Remind TV shows which airing on that day every 7:30 AM</string>
    <string name="release_reminder_key" translatable="false">release_reminder_key</string>
    <string name="release_reminder">Release reminder</string>
    <string name="release_reminder_summary">Remind you every 8:00 AM if there is any release Movie on that day</string>
    <string name="daily_reminder_key" translatable="false">daily_reminder_key</string>
    <string name="daily_reminder">Daily reminder</string>
    <string name="daily_reminder_summary">Remind you every 7:00 AM to make you up to date</string>

    <string name="title_activity_preference">Preference</string>

    <!-- Preference Titles -->
    <string name="preferences">Preferences</string>
    <string name="reminder">Reminder</string>


    <!-- Reminder Notification -->
    <string name="daily_reminder_content">Knock, knock, knock!</string>
    <string name="daily_reminder_message">Is there any human here? Let`s find your favorite Movies and TV Shows here!</string>
    <string name="release_reminder_title_notification">
        What`s new today?
    </string>
    <string name="release_reminder_message">
        Today is the first day for %s movie and %d other movies! Click to find more here
    </string>
    <string name="notification_error_content">We can\'t connect to your internet. But..</string>
    <string name="release_reminder_message2">
        There are any new movies release today! Check them now!
    </string>
    <string name="airing_today_reminder_title_notification">
        What will airing today
    </string>
    <string name="airing_today_reminder_message">
        %s airing today! Don\'t miss it!
    </string>
    <string name="airing_today_reminder_message2">
        Let`s check and find your favorite TV show which airing today! Click to find them!
    </string>
    <string name="favorite_movies">Favorite movies</string>
    <string name="favorite_tvs">Favorite TV shows</string>


    <!--  Movie section titles  -->
    <string name="popular_title">Popular</string>
    <string name="release_today_title">Release Today</string>
    <string name="now_playing_title">Now Playing</string>
    <string name="upcoming_title">Upcoming</string>


    <!--  TV section titles  -->
    <string name="airing_today_title">Airing Today</string>
    <string name="on_the_air">On The Air</string>

</resources>
