<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/error_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/movie_banner"
        android:src="@drawable/ic_movie_white_24dp"
        android:tint="@color/colorAccent" />

    <TextView
        android:id="@+id/error_view_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/no_item_text"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/error_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:text="@string/try_again"
        android:visibility="gone" />

</LinearLayout>