<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="160dp"
             android:clickable="true"
             android:focusable="true"
             android:foreground="?android:attr/selectableItemBackground"
             android:orientation="vertical">

    <ImageView
            android:id="@+id/img_banner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/movie_banner"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_launcher_background"/>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#60000000"
            android:padding="8dp">

        <TextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginTop="4dp"
                android:ellipsize="end"
                android:maxLines="2"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:text="Detective Conan: The Fist of Blue Sapphire In The Black Cave of Chamber Land"/>

        <TextView
                android:id="@+id/tv_original_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_title"
                android:textColor="@color/white"
                android:textSize="16sp"
                tools:text="[JP] ドラゴンボール"/>

        <TextView
                android:id="@+id/tv_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentBottom="true"
                android:textColor="@color/yellow"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:text="81"/>

        <TextView
                android:id="@+id/tv_max_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_toEndOf="@+id/tv_score"
                android:layout_toRightOf="@+id/tv_score"
                android:text="@string/max_score"
                android:textColor="@color/white"
                android:textSize="16sp"/>

        <ImageButton
                android:id="@+id/btn_favorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:padding="6dp"
                android:clickable="true"
                android:focusable="true"
                android:background="?selectableItemBackgroundBorderless"
                android:src="@drawable/ic_favorite_border_white_24dp"
                android:contentDescription="@string/favorite_button"/>
    </RelativeLayout>

</FrameLayout>